DAY 75/100 fix in add client, added add event temp

--- a/event_planner_site/templates/add_event.html
+++ b/event_planner_site/templates/add_event.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}Client Info{% endblock %}
+{% block title %}Plan Event{% endblock %}
 {% block excss %}{% endblock %}
 {% block content %}
 <h1 id="page_title">
-    Client Info
+    Plan Event
 </h1>
 <div class="row">
     <form class="col s12" action="" method="post" enctype="multipart/form-data">
