--- a/event_planner_site/templates/add_event.html
+++ b/event_planner_site/templates/add_event.html
@@ -7,24 +7,153 @@
 </h1>
 <div class="row">
     <form class="col s12" action="" method="post" enctype="multipart/form-data">
+
         {% csrf_token %}
-        {% for field in form %}
-            <div class="row" id="{{forloop.counter}}">
-                <div class="input-field col s12" >
-                    {{ field }}
-                    {{ field.label_tag }}
-                    {{ field.errors }}
-                </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="event_title"/>
             </div>
-        {% endfor %}
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="event_start_date"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="event_end_date"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="venue_name"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="address_1"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="address_2"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="city"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="state"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="zip"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="event_summary"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="load_in"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="load_out"/>
+            </div>
+        </div>
+        <div class="ui-widget">
+          <label for="clients" name="client">Client: </label>
+          <input id="clients">
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="truck_parking"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12" >
+                <input type="text" name="airport"/>
+            </div>
+        </div>
+        <div class="ui-widget">
+          <label for="pms" name="pm">Project Manager: </label>
+          <input id="pms">
+        </div>
         <input type="submit" value="Submit" id="submit_button" />
     </form>
 </div>
 {% endblock %}
 {% block exscript %}
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script>
         $(document).ready(function() {
-            $('select').material_select();
+        $('select').material_select();
         });
+        $( function() {
+            var availableTags = [
+                "ActionScript",
+                "AppleScript",
+                "Asp",
+                "BASIC",
+                "C",
+                "C++",
+                "Clojure",
+                "COBOL",
+                "ColdFusion",
+                "Erlang",
+                "Fortran",
+                "Groovy",
+                "Haskell",
+                "Java",
+                "JavaScript",
+                "Lisp",
+                "Perl",
+                "PHP",
+                "Python",
+                "Ruby",
+                "Scala",
+                "Scheme"
+            ];
+            $( "#clients" ).autocomplete({
+                source: availableTags
+            });
+        } );
+        $( function() {
+            var availableTags = [
+                "ActionScript",
+                "AppleScript",
+                "Asp",
+                "BASIC",
+                "C",
+                "C++",
+                "Clojure",
+                "COBOL",
+                "ColdFusion",
+                "Erlang",
+                "Fortran",
+                "Groovy",
+                "Haskell",
+                "Java",
+                "JavaScript",
+                "Lisp",
+                "Perl",
+                "PHP",
+                "Python",
+                "Ruby",
+                "Scala",
+                "Scheme"
+            ];
+            $( "#pms" ).autocomplete({
+                source: availableTags
+            });
+        } );
     </script>
 {% endblock %}
